# bevy_replicon

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: dependencies.yml  main.yml
benches/: related_entities.rs  replication.rs
bevy_replicon_example_backend/: Cargo.toml  README.md
bevy_replicon_example_backend/examples/: authoritative_rts.rs  deterministic_boids.rs  simple_box.rs  simple_button.rs  tic_tac_toe.rs
bevy_replicon_example_backend/src/: client.rs  lib.rs  server.rs
bevy_replicon_example_backend/tests/: backend.rs
example_backend/: Cargo.toml
example_backend/examples/: authoritative_rts.rs  deterministic_boids.rs  simple_button.rs  tic_tac_toe.rs
example_backend/src/: client.rs  lib.rs  link_conditioner.rs  server.rs
example_backend/tests/: backend.rs
src/: client.rs  compact_entity.rs  lib.rs  postcard_utils.rs  scene.rs  server.rs  shared.rs  test_app.rs  world_serialization.rs
src/client/: confirm_history.rs  diagnostics.rs  event.rs  message.rs  receive.rs  server_mutate_ticks.rs
src/receive/: mod.rs
src/send/: client_pools.rs  mod.rs  related_entities.rs  removal_buffer.rs  replicated_archetypes.rs  replication_query.rs
src/send/replication_messages/: mutations.rs  updates.rs
src/server/: client_entity_map.rs  client_pools.rs  client_visibility.rs  event.rs  message.rs  related_entities.rs  removal_buffer.rs  replicated_archetypes.rs  replication_messages.rs  replication_query.rs  send.rs  server_tick.rs  server_world.rs  visibility.rs
src/server/replication_messages/: change_ranges.rs  entity_ranges.rs  mutations.rs  serialized_data.rs  updates.rs
src/server/visibility/: client_visibility.rs  filters_mask.rs  registry.rs
src/shared/: backend.rs  client_id.rs  entity_serde.rs  event.rs  link_conditioner.rs  message.rs  protocol.rs  replication.rs  replicon_tick.rs  server_entity_map.rs  visibility.rs
src/shared/backend/: channels.rs  client_messages.rs  connected_client.rs  replicon_client.rs  replicon_server.rs  server_messages.rs
src/shared/event/: client_event.rs  client_trigger.rs  registry.rs  server_event.rs  server_trigger.rs
src/shared/message/: broadcast_event.rs  broadcast_message.rs  client_event.rs  client_message.rs  ctx.rs  message_fns.rs  registry.rs  server_event.rs  server_message.rs  shared_event.rs  shared_message.rs
src/shared/message/server_message/: message_buffer.rs  message_queue.rs  send.rs
src/shared/replication/: client_ticks.rs  command_markers.rs  context.rs  deferred_entity.rs  delta.rs  diff.rs  message_flags.rs  op_delta.rs  receive.rs  receive_markers.rs  registry.rs  replication_registry.rs  replication_rules.rs  rules.rs  send.rs  signature.rs  storage.rs  track_mutate_messages.rs  visibility.rs
src/shared/replication/delta/: diffable.rs  rules.rs
src/shared/replication/diff/: diff_index.rs  patch_index.rs
src/shared/replication/receive/: client_replication_stats.rs  remote.rs  server_mutate_ticks.rs
src/shared/replication/registry/: command_fns.rs  component_fns.rs  component_mask.rs  ctx.rs  receive_fns.rs  rule_fns.rs  serde_fns.rs  test_fns.rs
src/shared/replication/replication_registry/: rule_fns.rs
src/shared/replication/rules/: component.rs  filter.rs
src/shared/replication/send/: client_pools.rs  client_ticks.rs  priority_map.rs  related_entities.rs  removal_buffer.rs  replicated_archetypes.rs  replication_messages.rs  server_tick.rs  visibility.rs
src/shared/replication/send/replication_messages/: mutations.rs  updates.rs
src/shared/replication/send/visibility/: client_visibility.rs  filters_mask.rs  registry.rs
tests/: bidirectional_event.rs  broadcast_event.rs  broadcast_message.rs  client_event.rs  client_message.rs  client_trigger.rs  client_visibility.rs  connection.rs  delta_replication.rs  despawn.rs  diff.rs  fns.rs  insertion.rs  link_conditioner.rs  mutate_ticks.rs  mutations.rs  op_delta.rs  priority.rs  removal.rs  scene.rs  server_event.rs  server_message.rs  server_trigger.rs  spawn.rs  stats.rs  storage.rs  symmetric_replication.rs  userdata.rs  visibility.rs  world_serialization.rs
