[package]
name = "bevy_replicon_example_backend"
version = "0.37.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2024"
description = "A simple transport intended only for examples"
readme = "README.md"
repository = "https://github.com/simgine/bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE*"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
bevy_replicon = { path = "..", version = "0.37.0", default-features = false }
fastrand = "2.3"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
  "bevy_gizmos",
  "bevy_text",
  "bevy_ui_picking_backend",
  "bevy_ui_render",
  "bevy_window",
  "default_font",
  "debug",
  "serialize",
  "x11",
] }
clap = { version = "4.1", features = ["derive"] }
fastrand-contrib = "0.1"
pathfinding = "4.14"
serde = "1.0"
test-log = "0.2"

[features]
default = ["client", "server"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]

[lints.clippy]
type_complexity = "allow"
