[package]
name = "bevy_replicon_example_backend"
version = "0.38.0-rc.1"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2024"
description = "A simple transport intended only for examples"
readme = "README.md"
repository = "https://github.com/simgine/bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE*"]

[dependencies]
bevy = { version = "0.18.0-rc.1", default-features = false, features = [
  "bevy_log",
] }
bevy_replicon = { path = "..", version = "0.38.0-rc.1", default-features = false }
fastrand = "2.3"

[dev-dependencies]
bevy = { version = "0.18.0-rc.1", default-features = false, features = [
  "bevy_gizmos",
  "bevy_text",
  "bevy_ui_render",
  "bevy_window",
  "default_font",
  "debug",
  "gamepad",        # TODO: remove after the next Bevy RC (`bevy_input_focus` didn't set the dependency on `bevy_input` properly).
  "serialize",
  "ui_picking",
  "x11",
] }
clap = { version = "4.1", features = ["derive"] }
fastrand-contrib = "0.1"
pathfinding = "4.14"
serde = "1.0"
test-log = "0.2"

[features]
default = ["client", "server"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]

[lints.clippy]
type_complexity = "allow"
